public/styles/style.css
body {
	background: #323232;
	font-family: 'Hind', sans-serif;
}

.machine {
	position: relative;
	width: 750px;
	height: 550px;
	margin: 50px auto 0 auto;
	padding-top: 20px;
	border-radius: 10px;
	border: 2px solid #111;
	background: rgba(185,136,96,1);
	background: -moz-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(185,136,96,1)), color-stop(100%, rgba(153,91,40,1)));
	background: -webkit-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
	background: -o-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
	background: -ms-linear-gradient(top, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
	background: linear-gradient(to bottom, rgba(185,136,96,1) 0%, rgba(153,91,40,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b98860', endColorstr='#995b28', GradientType=0 );
	-webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
	box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.75);
}

.topDiv {
	position: relative;
	width: 700px;
	height: 80px;
	margin: 0 auto;
	color: #d3d3d3;
	display: flex;
	justify-content: space-around;
	align-items: center;
	font-family: 'Noto Sans', sans-serif;
	font-size: 13px;
	border-radius: 10px;
	border: 1px solid #111;
	background: rgba(69,70,74,1);
	background: -moz-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(69,70,74,1)), color-stop(100%, rgba(50,51,53,1)));
	background: -webkit-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -o-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -ms-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: linear-gradient(to bottom, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45464a', endColorstr='#323335', GradientType=0 );
	-webkit-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
	-moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
	box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
}

.brand {
	font-size: 50px;
	margin: 0;
}

.volume {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 0 20px;
}

.display {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 45px;
	height: 35px;
	background: #1a0e1f;
	font-family: 'Codystar', cursive;
	font-size: 18px;
	border-radius: 5px;
}

.knobDiv {
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.switch {
  position: relative;
  width: 50px;
  height: 20px;
}

.switch input {
  display: none;
}

.slide {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);

}

.slide:before {
  position: absolute;
  content: "";
  height: 50px;
  width: 50px;
  top: -15px;
  left: 0;
  border-radius: 50%;
	background: rgba(247,247,247,1);
	background: -moz-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(247,247,247,1)), color-stop(54%, rgba(168,168,168,1)), color-stop(100%, rgba(168,168,168,1)));
	background: -webkit-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
	background: -o-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
	background: -ms-radial-gradient(center, ellipse cover, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
	background: radial-gradient(ellipse at center, rgba(247,247,247,1) 0%, rgba(168,168,168,1) 54%, rgba(168,168,168,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#a8a8a8', GradientType=1 );
	-webkit-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
	box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);
  -webkit-transition: 0.05s;
  transition: 0.05s;
}

.slide:after {
	position: absolute;
	top: -15px;
	left: 24px;
	content: "";
	height: 27px;
	width: 3px;
	background: #444;
	border-radius: 10px;
	z-index: 5;
}

input[type=checkbox]:checked + .slide {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.leftLabel {
	padding-right: 8px;
	padding-bottom: 30px;
}

.rightLabel {
	padding-left: 8px;
	padding-bottom: 30px;
}

.title {
	font-size: 20px;
	margin: 0 auto;
	text-align: center;
}

.controls {
	display: flex;
	padding-top: 30px;
	justify-content: space-around;
	align-items: center;
}

.drumPads {
	position: relative;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(3, 1fr);
	grid-gap: 10px;
	padding: 10px;
	border-radius: 10px;
	border: 1px solid #111;
	background: rgba(69,70,74,1);
	background: -moz-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(69,70,74,1)), color-stop(100%, rgba(50,51,53,1)));
	background: -webkit-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -o-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -ms-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: linear-gradient(to bottom, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45464a', endColorstr='#323335', GradientType=0 );
	-webkit-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
	-moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
	box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
}

.pad {
	position: relative;
	width: 160px;
	height: 120px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	color: #383838;
	font-size: 20px;
	text-transform: uppercase;
	cursor: pointer;
	border-radius: 10px;
	background: #ddd;
	-webkit-box-shadow: inset 2px 2px 8px 3px rgba(255,255,255,1);
	-moz-box-shadow: inset 2px 2px 8px 3px rgba(255,255,255,1);
	box-shadow: inset 2px 2px 8px 3px rgba(255,255,255,1);
	border: 2px solid #111;
}

.padActive {
	background: rgba(255,255,255,1);
	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 19%, rgba(211,211,211,1) 71%, rgba(211,211,211,1) 100%);
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(19%, rgba(255,255,255,1)), color-stop(71%, rgba(211,211,211,1)), color-stop(100%, rgba(211,211,211,1)));
	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 19%, rgba(211,211,211,1) 71%, rgba(211,211,211,1) 100%);
	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 19%, rgba(211,211,211,1) 71%, rgba(211,211,211,1) 100%);
	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 19%, rgba(211,211,211,1) 71%, rgba(211,211,211,1) 100%);
	background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 19%, rgba(211,211,211,1) 71%, rgba(211,211,211,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d3d3d3', GradientType=1 );
	-webkit-box-shadow: inset 0px 0px 14px 1px rgba(0,0,0,0.75);
	-moz-box-shadow: inset 0px 0px 14px 1px rgba(0,0,0,0.75);
	box-shadow: inset 0px 0px 14px 1px rgba(0,0,0,0.75);
}


.letter {
	position: absolute;
	font-size: 18px;
	top: 2px;
	left: 5px;
}

.letterActive {
	font-size: 17px;
}

.keyLetter {
	transform: skew(0deg, 13deg);
}

.active {
  color: #ffebee;
  text-shadow: 0 0 10px rgba(255, 255, 255, 1), 0 0 20px rgba(255, 255, 255, 1),
    0 0 30px rgba(255, 255, 255, 1), 0 0 40px #00ff00, 0 0 70px #00ff00,
    0 0 80px #00ff00, 0 0 100px #00ff00;
  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
  -moz-transition: all 50ms cubic-bezier(0.42, 0, 0.58, 1);
  -o-transition: all 50ms cubic-bezier(0.42, 0, 0.58, 1);
  transition: all 50ms cubic-bezier(0.42, 0, 0.58, 1);
}

.sliderCont {
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.sliderDiv {
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin: 0 5px;
	width: 50px;
	height: 412px;
	border-radius: 10px;
	border: 1px solid #111;
	background: rgba(69,70,74,1);
	background: -moz-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(69,70,74,1)), color-stop(100%, rgba(50,51,53,1)));
	background: -webkit-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -o-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: -ms-linear-gradient(top, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	background: linear-gradient(to bottom, rgba(69,70,74,1) 0%, rgba(50,51,53,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45464a', endColorstr='#323335', GradientType=0 );
	-webkit-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
	-moz-box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
	box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75), 0px 0px 10px 0px rgba(0,0,0,0.75);
}

.slideTitle {
	font-family: 'Noto Sans', sans-serif;
	color: #d3d3d3;
	font-size: 10px;
	margin-bottom: 10px;
}

.slider {
	height: 350px;
	width: 100%;
	-webkit-appearance: slider-vertical;
}

.slider:focus {
	outline: none;
}

#author {
	margin-top: 15px;
  text-align: center;
  color: #adadad;
  font-family: Raleway;
  font-size: 14px;
}

